Cambios menores y compresion de imagenes para carga rapida

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
@@ -37,12 +39,14 @@
                 <img src="assets/img/angel.png" alt="">
             </div>
             <h1>Luis Angel</h1>
-            <h2>Ingeniero en Desarrollo y Gestión de Software</h2>
+            <h2>Desarrollador de Software Jr</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
+                <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i
+                        class="fa-brands fa-linkedin-in"></i></a>
+                <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i
+                        class="fa-solid fa-envelope"></i></i></a>
             </div>
         </div>
     </section>
@@ -51,7 +55,9 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Luis Angel Santos.</span> Tengo 22 años y actualmente soy desarrollador Java. Me apasiona la programación desde los 16 años y desde entonces he tenido un mundo a descubrir. Mi principal area es el desarrollo web, pero soy capaz de manejar distintos ambientes de desarrollo si asi se requiere.</p>
+            <p><span>Hola, soy Luis Angel Santos.</span> Tengo 22 años y actualmente soy desarrollador Java. Me apasiona
+                la programación desde los 16 años y desde entonces he tenido un mundo a descubrir. Mi principal area es
+                el desarrollo web, pero soy capaz de manejar distintos ambientes de desarrollo si asi se requiere.</p>
             <p style="text-align: center;">"No documentes el problema; arréglalo"</p>
             <br>
             <div class="fila">
@@ -136,40 +142,48 @@
                     <h3>Habilidades Técnicas</h3>
                     <div class="container-skills">
                         <div class="skill" title="Angular">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
                         </div>
                         <div class="skill" title="Html">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />       
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
                         </div>
                         <div class="skill" title="Github">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />            
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
                         </div>
                         <div class="skill" title="JavaScript">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />            
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
                         </div>
                         <div class="skill" title="TypeScript">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />            
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
                         </div>
                         <div class="skill" title="NodeJS">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg" />
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg" />
                         </div>
                         <div class="skill" title="Java">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
                         </div>
                         <div class="skill" title="MySQL">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" />
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" />
                         </div>
                         <div class="skill" title="MongoDB">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
                         </div>
                         <div class="skill" title="Firebase">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" />
                         </div>
                         <div class="skill" title=".Net Core">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" />
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" />
                         </div>
                         <div class="skill" title="BootStrap">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" />
+                            <img
+                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" />
                         </div>
                         <div class="skill" title="Bash">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-plain.svg" />
@@ -179,7 +193,7 @@
                         </div>
                         <div class="skill" title="Slack">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/slack/slack-original.svg" />
-                          </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -206,7 +220,7 @@
                             <span>Adm. de proyectos</span>
                         </div>
                         <div class="interes">
-                            <i class="fa-solid fa-arrow-up-right-dots"></i>    
+                            <i class="fa-solid fa-arrow-up-right-dots"></i>
                             <span>Proactividad</span>
                         </div>
                         <div class="interes">
@@ -237,94 +251,94 @@
             <div class="galeria">
                 <a href="https://mariogame-js.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/marioGame.png" alt="marioGame">
-                    <div class="overlay">
-                        <h3>Juego de Mario</h3>
-                        <p>HTML - JS - CSS</p>
+                        <img loading="lazy" src="assets/img/marioGame.png" alt="marioGame">
+                        <div class="overlay">
+                            <h3>Juego de Mario</h3>
+                            <p>HTML - JS - CSS</p>
                         </div>
                     </div>
                 </a>
                 <a href="https://luis-angel-santos.github.io/Blackjack/">
                     <div class="proyecto">
-                    <img src="assets/img/blackjack.png" alt="blackjack">
-                    <div class="overlay">
-                        <h3>BlackJack</h3>
-                        <p>HTML - JS - CSS</p>
+                        <img loading="lazy" src="assets/img/blackjack.png" alt="blackjack">
+                        <div class="overlay">
+                            <h3>BlackJack</h3>
+                            <p>HTML - JS - CSS</p>
                         </div>
                     </div>
                 </a>
                 <a href="https://luis-angel-santos.github.io/PeliculasApp/home">
                     <div class="proyecto">
-                    <img src="assets/img/peliculas.png" alt="peliculas">
-                    <div class="overlay">
-                        <h3>App de peliculas</h3>
-                        <p>Desarrollada haciendo uso de una API</p>
+                        <img loading="lazy" src="assets/img/peliculas.png" alt="peliculas">
+                        <div class="overlay">
+                            <h3>App de peliculas</h3>
+                            <p>Desarrollada haciendo uso de una API</p>
                         </div>
                     </div>
                 </a>
                 <a href="https://luis-angel-santos.github.io/appClima/">
                     <div class="proyecto">
-                    <img src="assets/img/clima.png" alt="clima">
-                    <div class="overlay">
-                        <h3>App del clima</h3>
-                        <p>Desarrollada haciendo uso de una API</p>
+                        <img loading="lazy" src="assets/img/clima.png" alt="clima">
+                        <div class="overlay">
+                            <h3>App del clima</h3>
+                            <p>Desarrollada haciendo uso de una API</p>
                         </div>
                     </div>
-                </a>   
+                </a>
                 <a href="https://luis-angel-santos.github.io/Pagina-de-Comida/">
                     <div class="proyecto">
-                    <img src="assets/img/comida.png" alt="comida">
-                    <div class="overlay">
-                        <h3>Página de Restaurante</h3>
-                        <p>HTML - CSS - JS</p>
+                        <img loading="lazy" src="assets/img/comida.png" alt="comida">
+                        <div class="overlay">
+                            <h3>Página de Restaurante</h3>
+                            <p>HTML - CSS - JS</p>
                         </div>
                     </div>
-                </a>      
+                </a>
                 <a href="https://fisio.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/fisio.png" alt="fisio">
-                    <div class="overlay">
-                        <h3>FISIO</h3>
-                        <p>Angular v15 - TypeScript - NodeJS - PWA</p>
+                        <img loading="lazy" src="assets/img/fisio.png" alt="fisio">
+                        <div class="overlay">
+                            <h3>FISIO</h3>
+                            <p>Angular v15 - TypeScript - NodeJS - PWA</p>
                         </div>
                     </div>
-                </a>   
+                </a>
                 <a href="https://jokes-app-lasi.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/jokes.png" alt="jokes">
-                    <div class="overlay">
-                        <h3>Jokes App</h3>
-                        <p>Angular v15 - TypeScript - NodeJS - Desarrollada haciendo uso de una API</p>
+                        <img loading="lazy" src="assets/img/jokes.png" alt="jokes">
+                        <div class="overlay">
+                            <h3>Jokes App</h3>
+                            <p>Angular v15 - TypeScript - NodeJS - Desarrollada haciendo uso de una API</p>
                         </div>
                     </div>
-                </a>  
+                </a>
                 <a href="https://heroes-lasi.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/heroes.png" alt="heroes">
-                    <div class="overlay">
-                        <h3>Héroes App</h3>
-                        <p>Angular v15 - TypeScript - NodeJS - PWA</p>
+                        <img loading="lazy" src="assets/img/heroes.png" alt="heroes">
+                        <div class="overlay">
+                            <h3>Héroes App</h3>
+                            <p>Angular v15 - TypeScript - NodeJS - PWA</p>
                         </div>
                     </div>
-                </a>  
+                </a>
                 <a href="https://trivia-lasi.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/trivia.png" alt="trivia">
-                    <div class="overlay">
-                        <h3>Trivia App</h3>
-                        <p>Angular v15 - TypeScript - NodeJS - PWA</p>
+                        <img loading="lazy" src="assets/img/trivia.png" alt="trivia">
+                        <div class="overlay">
+                            <h3>Trivia App</h3>
+                            <p>Angular v15 - TypeScript - NodeJS - PWA</p>
                         </div>
                     </div>
                 </a>
                 <a href="https://sistema-venta-lasi.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/sistemaVentas.png" alt="ventas">
-                    <div class="overlay">
-                        <h3>Sistema de Ventas</h3>
-                        <p>Angular v15 - C# - MySQL -PWA</p>
+                        <img loading="lazy" src="assets/img/sistemaVentas.png" alt="ventas">
+                        <div class="overlay">
+                            <h3>Sistema de Ventas</h3>
+                            <p>Angular v15 - C# - MySQL -PWA</p>
                         </div>
                     </div>
-                </a>           
+                </a>
             </div>
         </div>
     </section>
@@ -346,7 +360,7 @@
                 </div>
                 <!-- Datos de contacto -->
                 <div class="col">
-                    <img src="assets/img/mapa.jpg" alt="">
+                    <img loading="lazy" src="assets/img/mapa.jpg" alt="">
                     <div class="info">
                         <ul>
                             <li>
@@ -355,7 +369,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
-                                241 239 4657 
+                                241 239 4657
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
@@ -375,8 +389,10 @@
         <div class="redes">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
+            <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i
+                    class="fa-brands fa-linkedin-in"></i></a>
+            <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i
+                    class="fa-solid fa-envelope"></i></i></a>
             <br>
             <span class="">&copy; 2023 Angel Santos</span>
         </div>
@@ -384,4 +400,5 @@
     <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/f7abec8abf.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
