Se cambia facebook por gitlab

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1>Luis Angel</h1>
             <h2>Desarrollador de Software Jr</h2>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://gitlab.com/Luis-Angel-Santos"><i class="fa-brands fa-gitlab"></i></a>
                 <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i
                         class="fa-brands fa-linkedin-in"></i></a>
@@ -353,7 +353,7 @@
                     <input type="text" class="datosContacto" placeholder="Número telefónico">
                     <input type="text" class="datosContacto" placeholder="Dirección de correo">
                     <input type="text" class="datosContacto" placeholder="Tema">
-                    <textarea name="" class="datosContacto" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <textarea name="" class="datosContacto" cols="30" rows="5" placeholder="Mensaje"></textarea>
                     <button onclick="contacto()">
                         Enviar Mensaje <i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
@@ -388,14 +388,12 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://gitlab.com/Luis-Angel-Santos"><i class="fa-brands fa-gitlab"></i></a>
             <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i
-                    class="fa-brands fa-linkedin-in"></i></a>
-            <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i
-                    class="fa-solid fa-envelope"></i></i></a>
+            <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
             <br>
-            <span class="">&copy; 2023 Angel Santos</span>
+            <span class="">&copy; 2023 Dev Angel Santos</span>
         </div>
     </footer>
     <script src="js/main.js"></script>
