Optimizaciones de html

--- a/index.html
+++ b/index.html
@@ -65,65 +65,13 @@
                 <!-- datos personales -->
                 <div class="col">
                     <h3>Datos Personales</h3>
-                    <ul>
-                        <li>
-                            <strong>Cumpleaños</strong>
-                            09 de febrero
-                        </li>
-                        <li>
-                            <strong>Teléfono</strong>
-                            241 239 4657
-                        </li>
-                        <li>
-                            <strong>Email</strong>
-                            santosangel748@gmail.com
-                        </li>
-                        <li>
-                            <strong>Dirección</strong>
-                            Tlaxcala, México
-                        </li>
-                        <li>
-                            <strong>Cargo Actual</strong>
-                            <span> Desarrollador Java </span>
-                        </li>
-                    </ul>
+                    <!--Se renderizan desde js-->
                 </div>
                 <!-- intereses -->
                 <div class="col">
                     <h3>Intereses</h3>
                     <div class="contenedor-intereses">
-                        <div class="interes">
-                            <i class="fa-solid fa-gamepad"></i>
-                            <span>JUEGOS</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-headphones"></i>
-                            <span>MUSICA</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-plane"></i>
-                            <span>VIAJAR</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-code"></i>
-                            <span>PROGRAMAR</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-futbol"></i>
-                            <span>DEPORTE</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-book"></i>
-                            <span>LIBROS</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-language"></i>
-                            <span>IDIOMAS</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-camera"></i>
-                            <span>FOTOS</span>
-                        </div>
+                        <!--Se renderizan desde js-->
                     </div>
                 </div>
             </div>
@@ -141,102 +89,11 @@
                 <!-- Technical Skill -->
                 <div class="col">
                     <h3>Habilidades Técnicas</h3>
-                    <div class="container-skills">
-                        <div class="skill" title="Angular">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
-                        </div>
-                        <div class="skill" title="Html">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
-                        </div>
-                        <div class="skill" title="Github">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
-                        </div>
-                        <div class="skill" title="JavaScript">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
-                        </div>
-                        <div class="skill" title="TypeScript">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
-                        </div>
-                        <div class="skill" title="NodeJS">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg" />
-                        </div>
-                        <div class="skill" title="Java">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
-                        </div>
-                        <div class="skill" title="MySQL">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" />
-                        </div>
-                        <div class="skill" title="MongoDB">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
-                        </div>
-                        <div class="skill" title="Firebase">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" />
-                        </div>
-                        <div class="skill" title=".Net Core">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" />
-                        </div>
-                        <div class="skill" title="BootStrap">
-                            <img
-                                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" />
-                        </div>
-                        <div class="skill" title="Bash">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-plain.svg" />
-                        </div>
-                        <div class="skill" title="Git">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
-                        </div>
-                        <div class="skill" title="Slack">
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/slack/slack-original.svg" />
-                        </div>
-                    </div>
+                    <div class="container-skills"> <!--Se renderizan desde js--> </div>
                 </div>
                 <div class="col">
                     <h3>Habilidades Blandas</h3>
-                    <div class="contenedor-skills2">
-                        <div class="interes">
-                            <i class="fa-regular fa-face-smile"></i>
-                            <span>Comunicación</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-people-group"></i>
-                            <span>Trabajo en Equipo</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-star"></i>
-                            <span>Creatividad</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-hands-clapping"></i>
-                            <span>Dedicación</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-bars-progress"></i>
-                            <span>Adm. de proyectos</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-arrow-up-right-dots"></i>
-                            <span>Proactividad</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-people-arrows"></i>
-                            <span>Adaptabilidad</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-tools"></i>
-                            <span>Resolución de problemas</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-calendar"></i>
-                            <span>Organización</span>
-                        </div>
-                    </div>
+                    <div class="contenedor-skills2"> <!--Se renderizan desde js--> </div>
                 </div>
             </div>
         </div>
@@ -249,98 +106,7 @@
                 <b>Puedes ver el código de cada proyecto en mi GitHub</b>
             </center>
             <br>
-            <div class="galeria">
-                <a href="https://mariogame-js.netlify.app/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/marioGame.png" alt="marioGame">
-                        <div class="overlay">
-                            <h3>Juego de Mario</h3>
-                            <p>HTML - JS - CSS</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://luis-angel-santos.github.io/Blackjack/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/blackjack.png" alt="blackjack">
-                        <div class="overlay">
-                            <h3>BlackJack</h3>
-                            <p>HTML - JS - CSS</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://luis-angel-santos.github.io/PeliculasApp/home">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/peliculas.png" alt="peliculas">
-                        <div class="overlay">
-                            <h3>App de peliculas</h3>
-                            <p>Desarrollada haciendo uso de una API</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://luis-angel-santos.github.io/appClima/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/clima.png" alt="clima">
-                        <div class="overlay">
-                            <h3>App del clima</h3>
-                            <p>Desarrollada haciendo uso de una API</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://luis-angel-santos.github.io/Pagina-de-Comida/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/comida.png" alt="comida">
-                        <div class="overlay">
-                            <h3>Página de Restaurante</h3>
-                            <p>HTML - CSS - JS</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://fisio.netlify.app/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/fisio.png" alt="fisio">
-                        <div class="overlay">
-                            <h3>FISIO</h3>
-                            <p>Angular v15 - TypeScript - NodeJS - PWA</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://jokes-app-lasi.netlify.app/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/jokes.png" alt="jokes">
-                        <div class="overlay">
-                            <h3>Jokes App</h3>
-                            <p>Angular v15 - TypeScript - NodeJS - Desarrollada haciendo uso de una API</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://heroes-lasi.netlify.app/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/heroes.png" alt="heroes">
-                        <div class="overlay">
-                            <h3>Héroes App</h3>
-                            <p>Angular v15 - TypeScript - NodeJS - PWA</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://trivia-lasi.netlify.app/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/trivia.png" alt="trivia">
-                        <div class="overlay">
-                            <h3>Trivia App</h3>
-                            <p>Angular v15 - TypeScript - NodeJS - PWA</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://sistema-venta-lasi.netlify.app/">
-                    <div class="proyecto">
-                        <img loading="lazy" src="assets/img/sistemaVentas.png" alt="ventas">
-                        <div class="overlay">
-                            <h3>Sistema de Ventas</h3>
-                            <p>Angular v15 - C# - MySQL -PWA</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            <div class="galeria"> <!--Se renderizan desde js--> </div>
         </div>
     </section>
     <section id="contacto" class="contacto">
