--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dev Angel Santos">
-    <title>Mi portafolio</title>
+    <title>Dev Angel Santos</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
-
 <body>
-    <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
             <div class="logo">
@@ -33,41 +31,42 @@
             </div>
         </header>
     </div>
-    <!-- SECCION INICIO -->
     <section id="inicio" class="inicio">
-        <div class="contenido-banner">
+        <div class="inicio-contenido">
+            <div class="contenido-banner">
             <div class="contenedor-img">
                 <img src="assets/img/angel.png" alt="">
             </div>
             <h1>Luis Angel</h1>
-            <h2>Desarrollador de Software Jr</h2>
+            <h2>Desarrollador de Software</h2>
             <div class="redes">
                 <a href="https://gitlab.com/Luis-Angel-Santos"><i class="fa-brands fa-gitlab"></i></a>
                 <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i
-                        class="fa-brands fa-linkedin-in"></i></a>
-                <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i
-                        class="fa-solid fa-envelope"></i></i></a>
+                <a href="https://www.linkedin.com/in/dev-luis-angel-santos/"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="mailto:s.angeldev@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+            </div>
+            <div class="frases">
+            <h3>Hola, soy <span class="resaltado">Luis Angel Santos Islas, Ing. en Desarrollo y Gestión de Software</span>, pero también soy</h3>
+            <h3 class="typing"></h3>
             </div>
         </div>
     </section>
 
-    <!-- SECCION SOBRE MI -->
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Luis Angel Santos.</span> Tengo 22 años y actualmente soy desarrollador Java. Me apasiona
-                la programación desde los 16 años y desde entonces he tenido un mundo a descubrir. Mi principal area es
-                el desarrollo web, pero soy capaz de manejar distintos ambientes de desarrollo si asi se requiere.</p>
-            <p style="text-align: center;">"No documentes el problema; arréglalo"</p>
+            <p>Desarrollador de software con experiencia en backend y frontend, orientado a la creación de soluciones
+                eficientes y escalables. Apasionado por la mejora continua y la adopción de nuevas tecnologías, con un enfoque
+                proactivo en la resolución de problemas y capacidad para adaptarse rápidamente a distintos entornos de
+                desarrollo
+            </p>
             <br>
             <div class="fila">
-                <!-- datos personales -->
                 <div class="col">
                     <h3>Datos Personales</h3>
                     <!--Se renderizan desde js-->
                 </div>
-                <!-- intereses -->
                 <div class="col">
                     <h3>Intereses</h3>
                     <div class="contenedor-intereses">
@@ -81,12 +80,10 @@
             </button>
         </div>
     </section>
-    <!-- SECCION SKILLS -->
     <section class="skills" id="skills">
         <div class="contenido-seccion">
             <h2>Habilidades</h2>
             <div class="fila">
-                <!-- Technical Skill -->
                 <div class="col">
                     <h3>Habilidades Técnicas</h3>
                     <div class="container-skills"> <!--Se renderizan desde js--> </div>
@@ -98,12 +95,11 @@
             </div>
         </div>
     </section>
-    <!-- SECCION PORTFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>PORTAFOLIO</h2>
             <center>
-                <b>Puedes ver el código de cada proyecto en mi GitHub</b>
+                <b>Estos son solo algunos de los proyectos que he desarrollado.</b>
             </center>
             <br>
             <div class="galeria"> <!--Se renderizan desde js--> </div>
@@ -113,19 +109,6 @@
         <div class="contenido-seccion">
             <h2>CONTACTO</h2>
             <div class="fila">
-                <!-- Formulario -->
-                <div class="col">
-                    <input type="text" class="datosContacto" placeholder="Tú Nombre">
-                    <input type="text" class="datosContacto" placeholder="Número telefónico">
-                    <input type="text" class="datosContacto" placeholder="Dirección de correo">
-                    <input type="text" class="datosContacto" placeholder="Tema">
-                    <textarea name="" class="datosContacto" cols="30" rows="5" placeholder="Mensaje"></textarea>
-                    <button onclick="contacto()">
-                        Enviar Mensaje <i class="fa-solid fa-paper-plane"></i>
-                        <span class="overlay"></span>
-                    </button>
-                </div>
-                <!-- Datos de contacto -->
                 <div class="col">
                     <img loading="lazy" src="assets/img/mapa.jpg" alt="">
                     <div class="info">
@@ -140,7 +123,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
-                                santosangel748@gmail.com
+                                s.angeldev@gmail.com
                             </li>
                         </ul>
                     </div>
@@ -148,7 +131,6 @@
             </div>
         </div>
     </section>
-    <!-- footer -->
     <footer>
         <a href="#inicio" class="arriba">
             <i class="fa-solid fa-angles-up"></i>
@@ -156,10 +138,10 @@
         <div class="redes">
             <a href="https://gitlab.com/Luis-Angel-Santos"><i class="fa-brands fa-gitlab"></i></a>
             <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
+            <a href="https://www.linkedin.com/in/dev-luis-angel-santos/"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="mailto:s.angeldev@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
             <br>
-            <span class="">&copy; 2023 Dev Angel Santos</span>
+            <span class="">&copy; 2025 Angel Dev</span>
         </div>
     </footer>
     <script src="js/main.js"></script>
